# SDLSoftwareRenderer

./: .gitignore  CMakeLists.txt
source/: Model.cpp  Model.h  main.cpp  sdl_softrender.cpp
